2008-02-18  Alp Toker  <alp@atoker.com>

Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=17381
        [CURL] Regression: data URL parsing broken after DeprecatedString removal (Acid2)

        This patch resolves the regression for the GTK+ port.

        * platform/network/curl/ResourceHandleManager.cpp:
        (WebCore::parseDataUrl):


Canonical link: https://commits.webkit.org/24120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30386 268f45cc-cd09-0410-ab3c-d52691b4dbfc